Continued work on marginviewer. Initial load avoids comment overlapping.

--- a/css/annotator.css
+++ b/css/annotator.css
@@ -870,4 +870,8 @@
 
 .annotator-marginviewer-element {
 	border: 1px solid black;
+	margin: 0px;
+        margin-bottom: 3px;
+        width: 100%;
+        padding: 0px;
 }
